cambios en la intro

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,6 @@
 .container{
-  height: 100vh;
-  background-color: rgba(255, 255, 255, 0.605);
+font-family: monospace;
+font-style: italic;
+justify-content: right;
+
 }
