--- a/src/components/Contacto.css
+++ b/src/components/Contacto.css
@@ -32,6 +32,18 @@
     margin: 10px;
 }
 
+.formTop{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 600px;
+    width: 520px;
+    border: 2px solid black;
+    border-radius: 20px;
+    box-shadow: 2px 2px 2px 3px rgb(166, 166, 166);
+}
+
 .form{
     margin-top: 1%;
     display: flex;
@@ -39,28 +51,36 @@
     align-items: center;
     border-radius: 30px;
     border: 2px solid black;
-    height: 500px;
+    height: 600px;
     width: 500px;
+    background-image: url("../../public/assets/whatsfondo.png");
+    background-size: contain;
 }
 
 .area{
     height: 200px;
 }
 
-h4{
-    padding: 20px;
-    background-color: crimson;
-    color: white;
-    border-radius: 20px;
-    font-weight: bold;
+.a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+    width: 60px;
+    background-color: #228363;
+    border-radius: 100%;
     margin-top: 10px;
 }
-h4:hover{
-    background-color: White;
-    color: crimson;
-    border: 2px solid black;
+
+.img{
+    margin-left: 7px;
 }
 
-.a{
-    text-decoration: none;
+.sur{
+    width: 495px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 30px;
+    margin-bottom: 10px;
 }
