--- a/src/components/Carrusel.css
+++ b/src/components/Carrusel.css
@@ -3,6 +3,7 @@
         width: 100%;
         margin-top: 10px;
         margin-left: 30px;
+        flex-direction: row;
     }   
     .items{
         height: 300px;
