--- a/src/components/Contacto.css
+++ b/src/components/Contacto.css
@@ -1,7 +1,9 @@
 .Container{
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .formulario{
@@ -12,8 +14,8 @@
 }
 
 .TituloContainer{
-    margin-top: 20px;
-    margin-bottom: 20px;
+    background-color:white;
+    margin-bottom: 10px;
     display: flex;
     justify-content: center;
     width: 100%;
@@ -32,46 +34,36 @@
 }
 
 .inputs{
-    width: 400px;
-    margin: 10px;
-}
-
-.formTop{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 600px;
-    width: 520px;
-    border: 2px solid black;
-    border-radius: 20px;
-    box-shadow: 2px 2px 2px 3px rgb(166, 166, 166);
+    width: 350px;
+    margin: 5px;
+    border-radius: 5px;
 }
 
 .form{
-    margin-top: 1%;
+    box-shadow: 3px 3px 2px 3px gray;
+    margin-top: 2%;
     display: flex;
-    justify-content: center;
-    
+    justify-content: center; 
     align-items: center;
     border-radius: 30px;
     border: 2px solid black;
     height: 600px;
-    width: 500px;
+    width: 370px;
     background-image: url("../../public/assets/whatsfondo.png");
     background-size: contain;
 }
 
 .area{
     height: 200px;
+    border: black 2px solid;
 }
 
 .a{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60px;
-    width: 60px;
+    height: 40px;
+    width: 40px;
     background-color: #228363;
     border-radius: 100%;
     margin-top: 10px;
@@ -79,15 +71,6 @@
 
 .img{
     margin-left: 7px;
-}
-
-.sur{
-    width: 495px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 30px;
-    margin-bottom: 10px;
 }
 
 @media screen and (max-width: 768px) {
