--- a/src/components/Contacto.css
+++ b/src/components/Contacto.css
@@ -1,7 +1,11 @@
-.Container{
-    height: 100%;
+.container{
     display: flex;
+    width: 100%;
     flex-direction: column;
+    height: 100%;
+}
+.Container{
+    display: flex;
     align-items: center;
     justify-content: center;
 }
@@ -71,6 +75,20 @@
 
 .img{
     margin-left: 7px;
+}
+
+.Left{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+}
+
+.Right{
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @media screen and (max-width: 768px) {
