--- a/src/components/Contacto.css
+++ b/src/components/Contacto.css
@@ -109,7 +109,7 @@
         width: 95%;
     }
     .inputs{
-        width: 350px;
+        width: 320px;
         margin: 10px;
     }
     .Container{
@@ -123,7 +123,18 @@
     }
     .a{
         width: 50px;
+        height: 50px;
         background-color: #228363;
         border-radius: 100%;   
+    }
+    .Left{
+        display: none;
+    }
+    .Right{
+        width: 90%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
    }
