refining some components-need to continue

--- a/src/components/Carrusel.css
+++ b/src/components/Carrusel.css
@@ -23,8 +23,5 @@
    
 }
 .span{
-    color: crimson;
-    font-weight: bold;
-    font-family: monospace;
-    font-style: italic;
+    color: orange;
 }
