--- a/src/components/NavBar.scss
+++ b/src/components/NavBar.scss
@@ -6,9 +6,10 @@
     justify-content: center;
     position: fixed;
     z-index: 3;
-    background-color: rgb(255, 255, 255);
+    background-color: #e5f7ff;
     box-shadow: 0 2px 4px rgb(165, 165, 165);
-    
+
+
     .navbarHeader {
         display: flex;
         justify-content: center;
@@ -18,24 +19,40 @@
 
         .navbarLogo {
             .navbar_Logo_Image {
-                height: 10vh;
+                height: 15vh;
                 border-radius: 100%;
+                @media screen and (max-width: 770px) {
+                    height: 12vh;
+                }
             }
         }
-        .menu{
+
+        .menu {
             display: flex;
             gap: 2rem;
 
-            .menuItem {
+            .menuItem,
+            .menuItem_mobile {
                 text-decoration: none;
                 font-weight: 600;
                 font-size: 1.2rem;
-                color: #212529;
-
+                color: #202020;
+                
                 &:hover {
                     color: gray;
                     transform: scale(1.1);
                 }
+                .logo{
+                    height: 40px;
+                    @media screen and (max-width: 770px) {
+                        height: 25px;
+                    }
+                }
+            }
+        }
+        .menuItem {
+            @media screen and (max-width: 770px) {
+                display: none;
             }
         }
     }
