refining pages on nosotros

--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
     align-items: center;
     font-family: monospace;
-    background-color: #e5f7ff;
+    background-color: #f0fbff;
 
     @media screen and (max-width: 770px) {
         padding: 5px;
