--- a/src/components/SobreNosotros.scss
+++ b/src/components/SobreNosotros.scss
@@ -15,11 +15,22 @@
         height: 100%;
         display: flex;
         flex-direction: column;
-
+        
+        @media screen and (max-width: 770px)
+        {
+            justify-content: center;
+            align-items: center;
+        }
+        
         .Titulo_Container {
             .titulo_style {
                 text-align: center;
                 background-color: white;
+                @media screen and (max-width: 770px){
+                    font-size: 24px;
+                    margin-top: 5%;
+                    padding: 5px;
+                }
             }
 
         }
@@ -30,13 +41,22 @@
             display: flex;
             justify-content: space-evenly;
             align-items: center;
-
+            
             @media screen and (max-width: 770px) {
+                height: fit-content;
+                margin-top: 70%;
+                align-items:end;
                 flex-wrap: wrap;
+                background-color: #6cbbdad7;
+
             }
+
             
             .steps:nth-child(odd) {
                 margin-top: 10%;
+                @media screen and (max-width: 770px) {
+                    margin-top: 0;
+                }
             }
             .steps {
                 padding: 2%;
@@ -57,9 +77,11 @@
                 color: white;
                 box-shadow: 0 3px 3px #6cbada;
                 @media screen and (max-width: 770px) {
-                     width: 80px;
-                     height: 80px;
-                     .pMobile{
+                    background-color:transparent;
+                    width: 80px;
+                    height: 80px;
+                    box-shadow: none;
+                    .pMobile{
                         font-size: 12px;
                      }
                 }
